--- a/styles/map.module.css
+++ b/styles/map.module.css
@@ -1,7 +1,9 @@
 .mapContainer {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
 }
 
@@ -11,7 +13,7 @@
   height: 60px;
   border-radius: 50%;
   background-color: rgb(255, 217, 2); /* semi-transparent red circle */
-  border: 2px solid #fff;
+  border: 4px solid var(--location-border, #fff);
   cursor: pointer;
   transition: transform 0.2s ease, background-color 0.2s ease;
   /* background-image: url('/assets/house-icon.png');
